--- a/app/src/main/res/layout/activity_admin_history_details.xml
+++ b/app/src/main/res/layout/activity_admin_history_details.xml
@@ -21,7 +21,7 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="37dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="25dp"
             android:layout_marginStart="21dp"
             android:layout_marginEnd="21dp"
             app:cardBackgroundColor="#927d52">
@@ -386,7 +386,7 @@
             android:id="@+id/reservation_details_date_status_cardview_area"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="10dp"
             android:layout_marginStart="21dp"
             android:layout_marginEnd="21dp"
             app:cardBackgroundColor="#161f48">
@@ -496,9 +496,10 @@
 
                     <TextView
                         android:id="@+id/textView21"
-                        android:layout_width="220dp"
-                        android:layout_height="25dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="24dp"
                         android:layout_marginStart="20dp"
+                        android:layout_marginEnd="15dp"
                         android:background="@color/confirm"
                         android:gravity="center"
                         android:text="Confirmed"
@@ -509,7 +510,6 @@
 
                 </LinearLayout>
             </LinearLayout>
-
         </androidx.cardview.widget.CardView>
     </LinearLayout>
 
@@ -517,7 +517,7 @@
         android:id="@+id/btn_next"
         android:layout_width="150dp"
         android:layout_height="60dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="15dp"
         android:backgroundTint="#161f48"
         android:text="Back"
         android:textSize="17dp"
