--- a/app/src/main/res/layout/activity_admin_update_status.xml
+++ b/app/src/main/res/layout/activity_admin_update_status.xml
@@ -492,9 +492,10 @@
 
                     <Spinner
                         android:id="@+id/reservation_status_spinner"
-                        android:layout_width="250dp"
+                        android:layout_width="match_parent"
                         android:layout_height="50dp"
                         android:layout_marginStart="8dp"
+                        android:layout_marginEnd="15dp"
                         android:background="@android:color/transparent"
                         android:entries="@array/status_options"
                         android:popupBackground="@color/white"
@@ -504,8 +505,6 @@
 
                 </LinearLayout>
             </LinearLayout>
-
-
         </androidx.cardview.widget.CardView>
 
         <LinearLayout
@@ -538,9 +537,7 @@
                 android:text="Update"
                 android:textSize="16sp"
                 app:cornerRadius="10dp" />
-
         </LinearLayout>
-
     </LinearLayout>
 
 </ScrollView>
