--- a/app/src/main/res/layout/activity_reminders.xml
+++ b/app/src/main/res/layout/activity_reminders.xml
@@ -13,7 +13,6 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:orientation="vertical"
-        android:layout_marginTop="20dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/button_container"
         app:layout_constraintStart_toStartOf="parent"
@@ -66,14 +65,14 @@
             <androidx.cardview.widget.CardView
                 android:id="@+id/reminders_cardview_typing_area"
                 android:layout_width="match_parent"
-                android:layout_height="550dp"
+                android:layout_height="570dp"
                 android:layout_marginStart="30dp"
                 android:layout_marginEnd="30dp"
                 app:cardBackgroundColor="#161f48">
 
                 <ScrollView
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="wrap_content">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -256,7 +255,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="20dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
