--- a/app/src/main/res/layout/activity_reminders.xml
+++ b/app/src/main/res/layout/activity_reminders.xml
@@ -267,6 +267,7 @@
             android:layout_height="60dp"
             android:backgroundTint="#161f48"
             android:text="Back"
+            android:onClick="btnBack"
             android:textSize="16sp"
             app:cornerRadius="10dp" />
 
