--- a/app/src/main/res/layout/activity_admin_reservations.xml
+++ b/app/src/main/res/layout/activity_admin_reservations.xml
@@ -106,12 +106,12 @@
                                 android:textSize="16sp" />
 
                             <ImageView
-                                android:id="@+id/imageView"
+                                android:id="@+id/arrow"
                                 android:layout_width="45dp"
                                 android:layout_height="45dp"
                                 android:layout_gravity="center"
                                 android:background="@drawable/button_background"
-                                android:onClick="R1"
+                                android:onClick="reservations"
                                 android:padding="8dp"
                                 android:scaleType="centerCrop"
                                 app:srcCompat="@drawable/arrow"
