--- a/app/src/main/res/layout/activity_admin_update_status.xml
+++ b/app/src/main/res/layout/activity_admin_update_status.xml
@@ -23,6 +23,46 @@
             app:cardBackgroundColor="#927d52">
 
             <TextView
+                android:id="@+id/receipt_text3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="8dp"
+                android:text="Reservation Reference Number"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/receipt_reference_number_container"
+            android:layout_width="match_parent"
+            android:layout_height="76dp"
+            android:layout_marginStart="21dp"
+            android:layout_marginEnd="21dp"
+            app:cardBackgroundColor="#161f48">
+
+            <TextView
+                android:id="@+id/disp_refnum"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="90dp"
+                android:layout_marginTop="20dp"
+                android:text="LRDCDRR-000XX"
+                android:textColor="@color/white"
+                android:textSize="25sp"
+                android:textStyle="bold" />
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="37dp"
+            android:layout_marginStart="21dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="21dp"
+            app:cardBackgroundColor="#927d52">
+
+            <TextView
                 android:id="@+id/reminders_text3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -49,7 +89,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
                     <TextView
@@ -64,13 +104,13 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/reservation_details_edittext_name"
-                        android:layout_width="wrap_content"
+                        android:id="@+id/disp_name"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
                         android:layout_marginTop="20dp"
                         android:ems="10"
-                        android:text="Drilon, Alexis Yvone"
+                        android:text="XXX"
                         android:textColor="@color/white"
                         android:textSize="16dp" />
                 </LinearLayout>
@@ -94,13 +134,13 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/reservation_details_edittext_usertype"
+                        android:id="@+id/disp_userType"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
                         android:layout_marginTop="5dp"
                         android:ems="10"
-                        android:text="Student"
+                        android:text="XXX"
                         android:textColor="@color/white"
                         android:textSize="16dp" />
                 </LinearLayout>
@@ -117,19 +157,19 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="20dp"
                         android:layout_marginTop="5dp"
-                        android:text="College:"
+                        android:text="Department/Program:"
                         android:textColor="@color/white"
                         android:textSize="16dp"
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/value_college"
+                        android:id="@+id/disp_dept"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
                         android:layout_marginTop="5dp"
                         android:ems="10"
-                        android:text="SET"
+                        android:text="XXX"
                         android:textColor="@color/white"
                         android:textSize="16dp" />
                 </LinearLayout>
@@ -152,13 +192,13 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/reservation_details_edittext_idnum"
+                        android:id="@+id/disp_idnum"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
                         android:layout_marginTop="5dp"
                         android:ems="10"
-                        android:text="2023-134442"
+                        android:text="XXX"
                         android:textColor="@color/white"
                         android:textSize="16dp" />
                 </LinearLayout>
@@ -168,7 +208,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:orientation="horizontal">
-
 
                     <TextView
                         android:id="@+id/reservation_details_txt_contactnum"
@@ -182,13 +221,13 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/reservation_details_edittext_contactnum"
+                        android:id="@+id/disp_cnum"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
                         android:layout_marginTop="5dp"
                         android:ems="10"
-                        android:text="09271129799"
+                        android:text="XXX"
                         android:textColor="@color/white"
                         android:textSize="16dp" />
                 </LinearLayout>
@@ -212,14 +251,14 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/reservation_details_edittext_datereq"
+                        android:id="@+id/disp_reservation_date"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
                         android:layout_marginTop="5dp"
                         android:layout_marginEnd="5dp"
                         android:ems="10"
-                        android:text="Thursday, January 16"
+                        android:text="XXX"
                         android:textColor="@color/white"
                         android:textSize="16dp" />
 
@@ -243,13 +282,13 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/reservation_details_edittext_purpose_activity"
+                        android:id="@+id/disp_purpose"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
                         android:layout_marginTop="5dp"
                         android:ems="10"
-                        android:text="Group Meeting"
+                        android:text="XXX"
                         android:textColor="@color/white"
                         android:textSize="16dp" />
 
@@ -273,12 +312,12 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/reservation_details_edittext_purpose_sched"
+                        android:id="@+id/disp_date"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
                         android:layout_marginTop="5dp"
-                        android:text="Friday, January 17"
+                        android:text="date"
                         android:textColor="@color/white"
                         android:textSize="16dp" />
 
@@ -291,11 +330,11 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/duration"
+                        android:id="@+id/disp_time"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="100dp"
-                        android:text="7:00 AM to 10:00 AM (3hrs)"
+                        android:text="stime AM to etime"
                         android:textColor="@color/white"
                         android:textSize="16dp" />
                 </LinearLayout>
@@ -307,11 +346,11 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/rooms"
+                        android:id="@+id/disp_rooms"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="100dp"
-                        android:text="Room No. 2 (1 Room)"
+                        android:text="Discussion Room 2"
                         android:textColor="@color/white"
                         android:textSize="16dp" />
                 </LinearLayout>
@@ -334,13 +373,13 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/reservation_details_edittext_num_of_tables"
+                        android:id="@+id/disp_table"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
                         android:layout_marginTop="5dp"
                         android:ems="10"
-                        android:text="1"
+                        android:text="X"
                         android:textColor="@color/white"
                         android:textSize="16dp" />
 
@@ -350,7 +389,6 @@
                     android:layout_width="315dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
-                    android:layout_marginBottom="15dp"
                     android:orientation="horizontal">
 
                     <TextView
@@ -365,13 +403,42 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/reservation_details_edittext_num_of_chairs"
+                        android:id="@+id/disp_chair"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
                         android:layout_marginTop="5dp"
                         android:ems="10"
-                        android:text="5"
+                        android:text="X"
+                        android:textColor="@color/white"
+                        android:textSize="16dp" />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="15dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/lbl_other"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginTop="5dp"
+                        android:text="Other Materials:"
+                        android:textColor="@color/white"
+                        android:textSize="16dp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/disp_other"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="5dp"
+                        android:layout_marginTop="5dp"
+                        android:ems="10"
+                        android:text="X"
                         android:textColor="@color/white"
                         android:textSize="16dp" />
 
@@ -384,96 +451,33 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="21dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="21dp"
             app:cardBackgroundColor="#161f48">
+
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-
-                <LinearLayout
+                <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:layout_height="37dp"
+                    app:cardBackgroundColor="#927d52">
 
                     <TextView
-                        android:id="@+id/reservation_details_txt_reservation_date"
-                        android:layout_width="wrap_content"
+                        android:id="@+id/reminders_text"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginTop="15dp"
-                        android:text="Reservation Date:"
+                        android:layout_marginTop="8dp"
+                        android:text="Update Reservation Status"
+                        android:textAlignment="center"
                         android:textColor="@color/white"
-                        android:textSize="16dp"
+                        android:textSize="18dp"
                         android:textStyle="bold" />
+                </androidx.cardview.widget.CardView>
 
-                    <TextView
-                        android:id="@+id/reservation_details_edittext_reservation_date"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="5dp"
-                        android:layout_marginTop="15dp"
-                        android:layout_marginEnd="5dp"
-                        android:ems="10"
-                        android:text="Thursday, January 16"
-                        android:textColor="@color/white"
-                        android:textSize="16dp" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/reservation_status_txt_purpose_sched"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="20dp"
-                        android:text="Schedule:"
-                        android:textColor="@color/white"
-                        android:textSize="16dp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/reservation_status_edittext_purpose_sched"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="5dp"
-                        android:text="Friday, January 17"
-                        android:textColor="@color/white"
-                        android:textSize="16dp" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/reservation_status_duration"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="100dp"
-                        android:layout_marginTop="5dp"
-                        android:text="7:00 AM to 10:00 AM (3hrs)"
-                        android:textColor="@color/white"
-                        android:textSize="16dp" />
-
-                    <TextView
-                        android:id="@+id/reservation_status_rooms"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="100dp"
-                        android:layout_marginTop="5dp"
-                        android:text="Room No. 2 (1 Room)"
-                        android:textColor="@color/white"
-                        android:textSize="16dp" />
-                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -513,7 +517,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="10dp"
             android:layout_marginBottom="20dp"
             android:orientation="horizontal">
 
